testsuite/tests/linear/should_fail/LinearBottomMult.stderr

LinearBottomMult.hs:13:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In an equation for ‘f’:
          f x = elim (U (\ (a :: Void) -> case a of {}))
